<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:paddingStart="5dp"
                android:paddingEnd="72.5dp"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/MovieNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                tools:ignore="LabelFor"
                android:inputType="text" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/director"
                android:paddingStart="5dp"
                android:paddingEnd="50dp"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/MovieDirector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                tools:ignore="LabelFor"
                android:inputType="text" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_year"
                android:paddingStart="5dp"
                android:paddingEnd="19.5dp"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/MovieYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                tools:ignore="LabelFor"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/length"
                android:paddingStart="5dp"
                android:paddingEnd="57dp"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/MovieLength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                tools:ignore="LabelFor"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout4"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plot"
                android:paddingStart="5dp"
                android:paddingEnd="75dp"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/MoviePlot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                tools:ignore="LabelFor"
                android:inputType="text" />

        </LinearLayout>
    </RelativeLayout>

</ScrollView>